--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -207,7 +207,7 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-bind = $mainMod_SHIFT, S, exec, /bin/grimblast --notify copysave area /home/proto/Pictures/Screenshots/$(date +"%d-%m-%H-%M-%S").png
+bind = $mainMod_SHIFT, S, exec, /home/proto/.config/hypr/modules/grimblast --notify copysave area /home/proto/Pictures/Screenshots/$(date +"%d-%m-%H-%M-%S").png
 #bind = $mainMod, S, exec, hyprpicker
 
 # Scroll through existing workspaces with mainMod + scroll
