--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/proto/Wallpaper/ref.png
-wallpaper = DP-1,/home/proto/Wallpaper/ref.png
+preload = /home/proto/.config/hypr/modules/Wallpaper.png
+wallpaper = DP-1,/home/proto/.config/hypr/modules/Wallpaper.png
